# INLP-WS23

./: .gitignore  .pre-commit-config.yaml  Assignment_1.ipynb  DOCUMENTATION.md  ProjectDemo (1).ipynb  README.md  docker-compose.yml  embedding_models.py  pyproject.toml  requirements.txt  state.md
.github/workflows/: pre-commit.yaml
Meetings/: 03-02-24.md  04-01-24.md  10-01-24.md  12-01-24.md  14-12-23.md  15-01-24.md  18-12-23.md  23-11-23.md  25-01-24.md  26-11-23.md  29-11-23.md
assignments/: Assignment_1.ipynb
configs/: configs.yaml  recursive_512_50__gpt4all__vindex_10_1__llama_7b.yaml
env_setup/: docker-compose.yml
experiments/: Evaluation_testset_dataset.ipynb  ProjectDemo.ipynb  chat-llama.ipynb  concatenated-CELEX-category.csv  concatenated-all.csv  config-file-test.ipynb  crawl_data.ipynb  crawl_metadata.ipynb  fetch-articles.ipynb  get-pdf.ipynb  indexing-test.ipynb  project-demo.ipynb  test-embeddings.ipynb
experiments/LLM_Evaluation/: Evaluation_generate_response.ipynb  Evaluator_llm_based.ipynb  evaluation_bertscore.ipynb  evaluation_bertscore.ipynbZone.Identifier
experiments/all-data/: delegated-regulation.csv  implementing-decision.csv  international-agreement.csv
experiments/data/: decision.csv  exchange-of-letters.csv  search-results-emailed.csv  special-report.csv
experiments/dataset/raw-csvs/: arrangement.csv  communication.csv  convention.csv  directive.csv  implementing-regulation.csv  opinion.csv  protocol-to-the-agreement.csv  recommendation.csv  regulation.csv  resolution.csv  rules-of-procedure.csv
experiments/document-reader/: document_reader.ipynb
experiments/evaluation-analysis/: customized_violin.ipynb  evaluation_anlysisv2.ipynb
experiments/index-documents/: index-documents.ipynb
experiments/preprocessing/: langchain_chunks.ipynb
experiments/recursive-textsplitter/: recursive-textsplitter.ipynb
experiments/test-articles/: 21959A1006(01).html  21959A1006(02).html  21961A0126(01).html  21975A1201(01).html  21978A0116(01).html  21981A1218(05).html  21985A0731(06).html  21989A0228(01).html  21994A0803(01).html  21994A1231(51).html  32023L1791.html  32023L1791.txt
experiments/test-data/: test-meta-data.csv
experiments/test-data/chunks/: langchain-semantic-openai.txt
experiments/test-data/test-configs/: configs.yaml
experiments/test-data/txts/: 21981A1218(05).txt  32008R1099-PyPDF2.txt  32008R1099-elements.txt  32008R1099-formated-PyPDF2.txt  32008R1099-metadata-PyPDFLoader.txt  32008R1099-metadata-elements.txt  32008R1099-metadata-paged.txt  32008R1099-metadata-single.txt  32008R1099-metadata.json  32008R1099-paged-formated-PyPDF2.txt  32008R1099-paged.txt  32008R1099-single.txt  32023R1640.txt
src/LLMLegalAssistant/dataset/: ArticlesScraper.py  __init__.py
src/llmlegalassistant/: Elasticsearch.py  LLMLegalAssistant.py  __init__.py  __main__.py
src/llmlegalassistant/Embeddings/: EmbedWrapper.py  __init__.py
src/llmlegalassistant/config/: __init__.py  config.py
src/llmlegalassistant/data/: __init__.py  articlesindexer.py  articlesscraper.py  indexer.py  preprocessing.py
src/llmlegalassistant/retriever/: __init__.py  retriever.py
(+1766 files in other folders)
